# comp0034-tutorialapp-streamlit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/data/: api.py  mock_api.py  paralympics.db
src/paralympics/: app.py  app3.py  paralympics_dashboard.py
src/paralympics/pages/: teacher_admin.py
