[project]
name = "paralympics-streamlit"
version = "2025.0.1"
dependencies = [
    "streamlit",
    "pandas",
    "openpyxl",
    "plotly",
    "fastapi",
    "uvicorn",
    "requests",
    "pytest-playwright"
]
requires-python = ">= 3.12"

[build-system]
requires = ["setuptools",  "setuptools_scm"]
build-backend = "setuptools.build_meta"

# Pytest configuration see https://docs.pytest.org/en/stable/reference/customize.html
# and https://docs.pytest.org/en/stable/reference/reference.html#ini-options-ref
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rA -v"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning"]
